--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    // Sdk and tools
+    minSdkVersion = 15
+    targetSdkVersion = 25
+    compileSdkVersion = 25
+    buildToolsVersion = "26.0.0"
+
+    supportLibraryVersion = '25.3.1'
+    versionCode = 1
+    versionName = '1.0.1'
+}
